# doc-gen

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: Document.cpp.BBB6EBE71E4324BB.idx  Document.hpp.EF4AEFF897C427CE.idx  main.cpp.7978B39D586D9510.idx
include/: Document.hpp
src/: Document.cpp  generator.cpp  main.cpp
